# microchip-rs

./: .gitignore  Cargo.toml  README.md  perf.data  perf.data.old
benches/: bench.rs
data/: 1594462804_raw.hex  code.asm
misc/: fix.dart  fix.rs  fixed.rs  pic16f628a.csv
src/: bin_main.rs  main.rs
src/lib/: mod.rs
src/lib/compiler/: mcs51.rs
src/lib/components/: mod.rs  wd1772.rs
src/lib/decompiler/: mcs51.rs  mod.rs
src/lib/mcus/: 6502.rs  atmega328p.rs  mcs51.rs  mod.rs  pic16f628a.rs
src/lib/traits/: component.rs
