[package]
name = "microchip-rs"
version = "0.1.0"
authors = ["Florent Uguet <florent.uguet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench"
harness = false

[lib]
name = "microchip_rs"
path = "src/lib_main.rs"

[[bin]]
name = "microchip_rs_bin"
path = "src/bin_main.rs"